fix: mobile nav overflow

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -79,6 +79,7 @@
       transform: translateX(100%);
       transition: transform 0.3s ease-in-out;
       z-index: 10;
+      overflow: auto;
     }
   }
   &__list {
